# KKpipi_Analysis_BESIII

./: CMakeLists.txt  README.md
BinningSchemes/: KsPiPi_equal.root
DeltaECuts/: DeltaECuts_Data.cut  DeltaECuts_MC.cut  KKData.cut  KKMC.cut  KKpipi.cut  KKpipiData.cut  KKpipiMC.cut  KSetaData.cut  KSetaMC.cut  KSetaPrimepipieta.cut  KSetaPrimerhogamma.cut  KSetapipipi0MC.cut  KSomegapipipi0.cut  KSphiKK.cut  KSpi0Data.cut  KSpi0MC.cut  KSpi0pi0.cut  KSpi0pi0Data.cut  KSpi0pi0MC.cut  KSpipi.cut  Kpi.cut  KpiData.cut  KpiMC.cut  Kpipi0.cut  Kpipi0Data.cut  Kpipi0MC.cut  Kpipipi.cut  KpipipiData.cut  pipi.cut  pipiData.cut  pipiMC.cut  pipipi0.cut  pipipi0Data.cut  pipipi0MC.cut
InitialCuts/: KK.cut  KKpipi.cut  KKpipiPartReco.cut  KLpi0.cut  KLpi0pi0.cut  KLpipi.cut  KLpipipi0.cut  KSKK.cut  KSeta.cut  KSetaPrimepipieta.cut  KSetaPrimerhogamma.cut  KSetapipipi0.cut  KSomegapipipi0.cut  KSphiKK.cut  KSpi0.cut  KSpi0pi0.cut  KSpipi.cut  KSpipipi0.cut  KeNu.cut  Kpi.cut  Kpipi0.cut  Kpipipi.cut  pipipi0.cut
TruthMatchingCuts/: KLpi0.cut  KLpi0pi0.cut  KLpipipi0.cut  KSKS_to_KSpi0pi0.cut  KSeta.cut  KSetaPrimepipieta.cut  KSetaPrimepipietaDoubleTag.cut  KSetaPrimerhogamma.cut  KSetaPrimerhogammaDoubleTag.cut  KSpi0.cut  KSpi0gamma_to_KSpi0pi0.cut  KSpi0pi0.cut  KSpipi.cut  KSpipipi0.cut  KSpipipi0_to_KSetaPrimerhogamma.cut  KeNu_to_Kpi.cut  KeNupi0_to_Kpipi0.cut  KmuNu_to_Kpi.cut  KmuNupi0_to_Kpipi0.cut  Kpi0eNu_to_KeNu.cut  Kpipi0.cut  Kpipi0_to_KK.cut  Kpipi0_to_KeNu.cut  Kpipipipi0_to_KKpipi.cut  pipieta_to_KSeta.cut  pipipi0_to_KSpi0.cut  pipipi0pi0_to_KSpi0pi0.cut  pipipipi_to_KSpipi.cut
apps/: AnalyzeTopoAna.cpp  BinDoubleTags.cpp  BinMigrationStudy.cpp  CMakeLists.txt  CorrectFlavourTagYields.cpp  DetermineDoubleTagYields.cpp  FitDeltaE.cpp  FitDoubleTagMBC.cpp  FitFPlus.cpp  FitPeakingShape.cpp  FitSingleTagMBC.cpp  FitSingleTagPeaking.cpp  Fitcisi.cpp  GetDCSCorrections.cpp  GetDoubleTagEfficiencies.cpp  GetSingleTagEfficiencies.cpp  MakeDeltaECuts.cpp  MakeResolutionHistograms.cpp  PredictDoubleTaggedYields.cpp  PrepareTagTree.cpp
include/: ApplyCuts.h  BinnedBYieldPrediction.h  BinnedCPTagYieldPrediction.h  BinnedDTData.h  BinnedDTYieldPrediction.h  BinnedDataLoader.h  BinnedFitModel.h  BinnedFlavourTagYieldPrediction.h  BinnedSCMBTagYieldPrediction.h  Category.h  CholeskySmearing.h  CutsFromFile.h  DeltaECut.h  DeltaEFit.h  DeltaEFitModel.h  DoubleTagYield.h  FPlusFitter.h  GammaFitterParameters.h  GammaLikelihood.h  GaussianConstraints.h  InitialCuts.h  OldDoubleTagYield.h  PredictNumberEvents.h  RawBinnedCPTagYields.h  RawBinnedDTYieldLikelihood.h  RawBinnedDTYields.h  RawBinnedFlavourTagYields.h  RawBinnedSCMBTagYields.h  Settings.h  SingleTagYield.h  TopoAnaReader.h  TruthMatchingCuts.h  Unique.h  Utilities.h  cisiFitter.h  cisiFitterParameters.h  cisiK0pipi.h  cisiK0pipiRooFit.h  cisiLikelihood.h
include/FlavourTags/: FlavourTagYield.h  KiCombiner.h
include/HadronicParameters/: DCS_Parameters.h  Ki.h  cisi.h
include/PhaseSpace/: DalitzUtilities.h  GeneratorKinematics.h  KKpipi_PhaseSpace.h  KKpipi_vs_CP_PhaseSpace.h  KKpipi_vs_Flavour_PhaseSpace.h  KKpipi_vs_K0hh_PhaseSpace.h  KKpipi_vs_KShh_PhaseSpace.h
include/RooShapes/: Chebychev_Shape.h  CrystalBall_Shape.h  DoubleCrystalBall_Shape.h  DoubleGaussianRatio_Shape.h  DoubleGaussian_Shape.h  DoublePolynomial_Shape.h  FitShape.h
src/: ApplyCuts.cpp  Bes3plotstyle.cpp  BinnedBYieldPrediction.cpp  BinnedCPTagYieldPrediction.cpp  BinnedDTData.cpp  BinnedDTYieldPrediction.cpp  BinnedDataLoader.cpp  BinnedFitModel.cpp  BinnedFlavourTagYieldPrediction.cpp  BinnedSCMBTagYieldPrediction.cpp  CMakeLists.txt  Category.cpp  CholeskySmearing.cpp  CutsFromFile.cpp  DeltaECut.cpp  DeltaEFit.cpp  DeltaEFitModel.cpp  DoubleTagYield.cpp  FPlusFitter.cpp  GammaLikelihood.cpp  InitialCuts.cpp  PredictNumberEvents.cpp  RawBinnedCPTagYields.cpp  RawBinnedDTYieldLikelihood.cpp  RawBinnedDTYields.cpp  RawBinnedFlavourTagYields.cpp  RawBinnedSCMBTagYields.cpp  Settings.cpp  SingleTagYield.cpp  TopoAnaReader.cpp  TruthMatchingCuts.cpp  Utilities.cpp  cisiFitter.cpp  cisiK0pipi.cpp  cisiK0pipiRooFit.cpp  cisiLikelihood.cpp
src/FlavourTags/: FlavourTagYield.cpp  KiCombiner.cpp
src/HadronicParameters/: DCS_Parameters.cpp  Ki.cpp  cisi.cpp
src/PhaseSpace/: DalitzUtilities.cpp  KKpipi_PhaseSpace.cpp  KKpipi_vs_CP_PhaseSpace.cpp  KKpipi_vs_Flavour_PhaseSpace.cpp  KKpipi_vs_K0hh_PhaseSpace.cpp  KKpipi_vs_KShh_PhaseSpace.cpp
src/RooShapes/: Chebychev_Shape.cpp  CrystalBall_Shape.cpp  DoubleCrystalBall_Shape.cpp  DoubleGaussianRatio_Shape.cpp  DoubleGaussian_Shape.cpp  DoublePolynomial_Shape.cpp  FitShape.cpp
